--- a/test-kernel/makefile
+++ b/test-kernel/makefile
@@ -27,7 +27,7 @@ deploy64: all64
 
 all64: LINKERSCRIPT = ./link64.ld
 all64: export CFLAGS = -march=armv8-a -Wall -O3 -nostdlib -nostartfiles -ffreestanding -mtune=cortex-a53
-all64: export RUSTFLAGS = -C linker=aarch64-elf-gcc.exe -C target-cpu=cortex-a53 -C target-feature=+strict-align,+a53,+fp-armv8,+neon -C link-arg=-nostartfiles -C link-arg=-T$(LINKERSCRIPT) -C opt-level=3 -C debuginfo=0
+all64: export RUSTFLAGS = -C linker=aarch64-elf-gcc.exe -C target-cpu=cortex-a53 -C target-feature=+strict-align,+a53,+fp-armv8,+neon -C link-arg=-nostartfiles -C opt-level=3 -C debuginfo=0 -C link-arg=-T$(LINKERSCRIPT)
 all64: export CC = aarch64-elf-gcc.exe
 all64: export AR = aarch64-elf-ar.exe
 all64: kernel8
