--- a/dev-target/Cargo.toml
+++ b/dev-target/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ruspiro-loader"
 authors = ["Andre Borrmann <pspwizard@gmx.de>"]
-version = "0.2.0" # remember to update html_root_url
+version = "0.3.0" # remember to update html_root_url
 license = "Apache-2.0"
 repository = "https://github.com/RusPiRo/ruspiro-loader/"
 readme = "README.md"
@@ -30,8 +30,8 @@ ruspiro-interrupt = { path = "../../interrupt", version = "0.3" }
 ruspiro-uart = { path = "../../uart", version = "0.3", features = ["with_allocator"] }
 ruspiro-singleton = { path = "../../singleton", version =" 0.3" }
 ruspiro-lock = { path = "../../lock", version = "0.3" }
-#ruspiro-timer = { path = "../../timer", version = "0.3" }
-#ruspiro-cache = { path = "../../cache", version = "0.3" }
+ruspiro-timer = { path = "../../timer", version = "0.3" }
+ruspiro-cache = { path = "../../cache", version = "0.3" }
 
 [features]
 default = ["ruspiro_pi3"]
