--- a/test-kernel/Cargo.toml
+++ b/test-kernel/Cargo.toml
@@ -14,16 +14,28 @@ publish = false
 # keep either bin or lib
 [[bin]]
 name = "kernel"
-path = "./src/kernel.rs"
+path = "./src/entry.rs"
+
+[profile.dev]
+panic = "abort"
 
 [profile.release]
 panic = "abort"
 
+[build-dependencies]
+cc = "1.0"
+
 [dependencies]
-ruspiro-boot = { path = "../../boot", features = ["with_panic", "with_exception"] }
-ruspiro-allocator = { path = "../../allocator" }
-#ruspiro-sdk = { path = "../../sdk" }
+ruspiro-register = { path = "../../register", version = "0.3" }
+ruspiro-interrupt = { path = "../../interrupt", version = "0.3" }
+ruspiro-gpio = { path = "../../gpio", version = "0.3" }
+ruspiro-timer = { path = "../../timer", version = "0.3" }
+ruspiro-uart = { path = "../../uart", version = "0.3", features = ["with_allocator"] }
 
 [features]
 default = ["ruspiro_pi3"]
-ruspiro_pi3 = []#"ruspiro-sdk/ruspiro_pi3"]
+ruspiro_pi3 = [
+    "ruspiro-gpio/ruspiro_pi3",
+    "ruspiro-timer/ruspiro_pi3",
+    "ruspiro-uart/ruspiro_pi3"
+]
