--- a/dev-host/Cargo.toml
+++ b/dev-host/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
-name = "ruspiro-push"
+name = "ruspiro-loader-push"
 authors = ["Andre Borrmann <pspwizard@gmx.de>"]
-version = "0.0.1" # remember to update html_root_url
+version = "0.1.0" # remember to update html_root_url
 description = """
 Supporting tool to push new RusPiRo Kernel's from the development machine (PC) to the Raspberry Pi
 if connected through a serial port.
 """
 license = "Apache-2.0"
 repository = "https://github.com/RusPiRo/ruspiro-push"
-documentation = "https://docs.rs/ruspiro-push/0.0.1"
+documentation = "https://docs.rs/ruspiro-push/0.1.0"
 readme = "README.md"
 keywords = ["RusPiRo", "baremetal", "raspberrypi", "operations"]
 categories = ["", "embedded"]
