--- a/test-kernel/Cargo.toml
+++ b/test-kernel/Cargo.toml
@@ -28,14 +28,14 @@ cc = "1.0"
 [dependencies]
 ruspiro-boot = { path = "../../boot", version = "0.3", features = ["singlecore"] }
 ruspiro-gpio = { path = "../../gpio", version = "0.3" }
-ruspiro-timer = { path = "../../timer", version = "0.3" }
 ruspiro-uart = { path = "../../uart", version = "0.3", features = ["with_allocator"] }
 ruspiro-singleton = { path = "../../singleton", version = "0.3" }
+ruspiro-interrupt = { path = "../../interrupt", version = "0.3" }
+ruspiro-register = { path = "../../register", version = "0.3" }
 
 [features]
 default = ["ruspiro_pi3"]
 ruspiro_pi3 = [
     "ruspiro-gpio/ruspiro_pi3",
-    "ruspiro-timer/ruspiro_pi3",
     "ruspiro-uart/ruspiro_pi3"
 ]
