--- a/dev-target/Cargo.toml
+++ b/dev-target/Cargo.toml
@@ -14,12 +14,6 @@ publish = false
 name = "kernel"
 path = "./src/entry.rs"
 
-[profile.dev]
-panic = "abort"
-
-[profile.release]
-panic = "abort"
-
 [build-dependencies]
 cc = "1.0"
 
@@ -27,11 +21,12 @@ cc = "1.0"
 ruspiro-register = { path = "../../register", version = "0.3" }
 ruspiro-gpio = { path = "../../gpio", version = "0.3" }
 ruspiro-interrupt = { path = "../../interrupt", version = "0.3" }
-ruspiro-uart = { path = "../../uart", version = "0.3", features = ["with_allocator"] }
+ruspiro-uart = { path = "../../uart", version = "0.3" }
 ruspiro-singleton = { path = "../../singleton", version =" 0.3" }
 ruspiro-lock = { path = "../../lock", version = "0.3" }
 ruspiro-timer = { path = "../../timer", version = "0.3" }
 ruspiro-cache = { path = "../../cache", version = "0.3" }
+ruspiro-allocator = { path = "../../allocator", version ="0.3" }
 
 [features]
 default = ["ruspiro_pi3"]
