--- a/test-kernel/Cargo.toml
+++ b/test-kernel/Cargo.toml
@@ -6,7 +6,7 @@ description = """
 Simple test kernel for the boot loader
 """
 license = "Apache-2.0"
-keywords = ["RusPiRo", "baremetal", "raspberrypi", "bootloader"]
+keywords = ["RusPiRo", "baremetal", "raspberrypi", "bootloader", "test-kernel"]
 categories = ["no-std", "embedded"]
 edition = "2018"
 publish = false
@@ -16,22 +16,17 @@ publish = false
 name = "kernel"
 path = "./src/kernel.rs"
 
-[profile.dev]
-panic = "abort"
-
-[profile.release]
-panic = "abort"
-
 [build-dependencies]
 cc = "1.0"
 
 [dependencies]
-ruspiro-boot = { path = "../../boot", version = "0.3", features = ["singlecore"] }
+ruspiro-boot = { path = "../../boot", version = "0.3" }#, features = ["singlecore"] }
 ruspiro-gpio = { path = "../../gpio", version = "0.3" }
-ruspiro-uart = { path = "../../uart", version = "0.3", features = ["with_allocator"] }
+ruspiro-uart = { path = "../../uart", version = "0.3" }
 ruspiro-singleton = { path = "../../singleton", version = "0.3" }
 ruspiro-interrupt = { path = "../../interrupt", version = "0.3" }
 ruspiro-register = { path = "../../register", version = "0.3" }
+ruspiro-allocator = { path = "../../allocator", version = "0.3" }
 
 [features]
 default = ["ruspiro_pi3"]
