--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ matrix:
         - cargo install cargo-xbuild
         - rustup target add aarch64-unknown-linux-gnu
         - rustup component add rust-src
-        - sudo chmod ugo+x dev-target/build.sh
+        - sudo chmod ugo+x ./build.sh
         - sed -i 's/path.*=.*\".*", //g' Cargo.toml
       script: ./build.sh travis
 
