fix test-kernel cargo.toml

--- a/test-kernel/Cargo.toml
+++ b/test-kernel/Cargo.toml
@@ -11,6 +11,8 @@ categories = ["no-std", "embedded"]
 edition = "2018"
 publish = false
 
+[workspace]
+
 # keep either bin or lib
 [[bin]]
 name = "kernel"
