--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ matrix:
       install:
         - sudo apt-get install gcc-aarch64-linux-gnu gcc-aarch64-linux-gnu
         - cargo install cargo-xbuild
+        - cargo install cargo-binutils
         - rustup target add aarch64-unknown-linux-gnu
         - rustup component add rust-src
         - sudo chmod ugo+x ./build.sh
@@ -27,6 +28,7 @@ matrix:
       install:
         - sudo apt-get install gcc-aarch64-linux-gnu gcc-aarch64-linux-gnu
         - cargo install cargo-xbuild
+        - cargo install cargo-binutils
         - rustup target add aarch64-unknown-linux-gnu
         - rustup component add rust-src
         - sudo chmod ugo+x test-kernel/build.sh
@@ -37,6 +39,7 @@ matrix:
       install:
         - sudo apt-get install gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf
         - cargo install cargo-xbuild
+        - cargo install cargo-binutils
         - rustup target add armv7-unknown-linux-gnueabihf
         - rustup component add rust-src
         - sudo chmod ugo+x test-kernel/build.sh
