--- a/.travis.yml
+++ b/.travis.yml
@@ -15,33 +15,11 @@ matrix:
   include:
     - name: "RusPiRo Loader Kernel"
       install:
-        - sudo apt-get install gcc-aarch64-linux-gnu gcc-aarch64-linux-gnu
+        - sudo apt-get install gcc-aarch64-linux-gnu
         - cargo install cargo-xbuild
-        - cargo install cargo-binutils
+        - cargo install cargo-make
         - rustup target add aarch64-unknown-linux-gnu
         - rustup component add rust-src
-        - sudo chmod ugo+x ./build.sh
+        - rustup component add llvm-tools-preview
         - sed -i 's/path.*=.*\".*", //g' Cargo.toml
-      script: ./build.sh travis
-
-    - name: "RusPiRo Test Kernel 64Bit"
-      install:
-        - sudo apt-get install gcc-aarch64-linux-gnu gcc-aarch64-linux-gnu
-        - cargo install cargo-xbuild
-        - cargo install cargo-binutils
-        - rustup target add aarch64-unknown-linux-gnu
-        - rustup component add rust-src
-        - sudo chmod ugo+x test-kernel/build.sh
-        - cd test-kernel && sed -i 's/path.*=.*\".*", version/version/g' Cargo.toml
-      script: ./build.sh 64 build travis
-
-    - name: "RusPiRo Test Kernel 32Bit"
-      install:
-        - sudo apt-get install gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf
-        - cargo install cargo-xbuild
-        - cargo install cargo-binutils
-        - rustup target add armv7-unknown-linux-gnueabihf
-        - rustup component add rust-src
-        - sudo chmod ugo+x test-kernel/build.sh
-        - cd test-kernel && sed -i 's/path.*=.*\".*", version/version/g' Cargo.toml
-      script:  ./build.sh 32 build travis
+      script: cargo make pi3 --profile travis
