--- a/Makefile.toml
+++ b/Makefile.toml
@@ -1,12 +1,13 @@
 [env]
 CC = "aarch64-none-elf-gcc"
-AR = "aarch64-none-elf-gcc"
+AR = "aarch64-none-elf-ar"
 CFLAGS = "-march=armv8-a -Wall -O3 -nostdlib -nostartfiles -ffreestanding -mtune=cortex-a53"
-RUSTFLAGS = "-C linker=aarch64-none-elf-gcc -C target-cpu=cortex-a53 -C target-feature=+strict-align,+a53,+fp-armv8,+neon -C link-arg=-T./linkbl.ld"
+RUSTFLAGS = "-C linker=aarch64-none-elf-gcc -C target-cpu=cortex-a53 -C target-feature=+strict-align,+a53,+fp-armv8,+neon -C link-arg=-T./linkbl.ld -C link-arg=-nostartfiles"
+BUILD_TARGET = "aarch64-unknown-linux-gnu"
 
 [tasks.build]
 command = "cargo"
-args = ["build", "--release", "--target",  "aarch64-unknown-linux-gnu", "--features", "${FEATURES}"]
+args = ["build", "--release", "--target",  "${BUILD_TARGET}", "--features", "${FEATURES}"]
 
 [tasks.kernel]
 command = "aarch64-none-elf-objcopy"
