add pi4 support and refactor loader

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -1,20 +1,101 @@
-[env]
+[env.development]
 CC = "aarch64-none-elf-gcc"
-AR = "aarch64-none-elf-gcc"
+AR = "aarch64-none-elf-ar"
+OCOPY = "aarch64-none-elf-objcopy"
 CFLAGS = "-march=armv8-a -Wall -O3 -nostdlib -nostartfiles -ffreestanding -mtune=cortex-a53"
-RUSTFLAGS = "-C linker=aarch64-none-elf-gcc -C target-cpu=cortex-a53 -C target-feature=+strict-align,+a53,+fp-armv8,+neon -C link-arg=-T./linkbl.ld"
+RUSTFLAGS = "-C linker=${CC} -C target-cpu=cortex-a53 -C target-feature=+strict-align,+a53,+fp-armv8,+neon -C link-arg=-nostartfiles -C link-arg=-T./linkbl.ld"
+
+[env.pipeline]
+CC = "aarch64-linux-gnu-gcc"
+AR = "aarch64-linux-gnu-ar"
+OCOPY = "aarch64-linux-gnu-objcopy"
+CFLAGS = "-march=armv8-a -Wall -O3 -nostdlib -nostartfiles -ffreestanding -mtune=cortex-a53"
+RUSTFLAGS = "-C linker=${CC} -C target-cpu=cortex-a53 -C target-feature=+strict-align,+a53,+fp-armv8,+neon -C link-arg=-nostartfiles -C link-arg=-T./linkbl.ld"
+
+
+[tasks.qemu]
+command = "qemu-system-aarch64"
+args = ["-M", "raspi3", "-kernel", "./target/kernel8.img", "-nographic", "-serial", "null", "-serial", "mon:stdio",  "-d", "int,mmu", "-D", "qemu.log"]
+dependencies = [
+    "pi3"
+]
 
 [tasks.build]
 command = "cargo"
-args = ["build", "--release", "--target",  "aarch64-unknown-linux-gnu", "--features", "${FEATURES}"]
+args = ["build", "--release", "--features", "${FEATURES}"]
 
 [tasks.kernel]
 command = "aarch64-none-elf-objcopy"
-args = ["-O", "binary", "./target/aarch64-unknown-linux-gnu/release/kernel", "./target/kernel8.img"]
+args = ["-O", "binary", "./target/aarch64-ruspiro/release/kernel", "./target/kernel8.img"]
 dependencies = [
     "build"
 ]
 
+[tasks.buildstub_high]
+command = "aarch64-none-elf-gcc"
+args = ["-DBCM2711=1", "-DHIGH_PERI=1", "-c", "./src/asm/armstub8.S", "-o", "./target/aarch64-ruspiro/release/armstub8.o"]
+
+[tasks.buildstub_low]
+command = "aarch64-none-elf-gcc"
+args = ["-DBCM2711=1", "-DHIGH_PERI=0", "-c", "./src/asm/armstub8.S", "-o", "./target/aarch64-ruspiro/release/armstub8.o"]
+
+[tasks.linkstub_low]
+command = "aarch64-none-elf-ld"
+args = ["-T./linkstub.ld", "./target/aarch64-ruspiro/release/armstub8.o", "-o", "./target/aarch64-ruspiro/release/armstub8.elf"]
+dependencies = [
+    "buildstub_low"
+]
+
+[tasks.linkstub_high]
+command = "aarch64-none-elf-ld"
+args = ["-T./linkstub.ld", "./target/aarch64-ruspiro/release/armstub8.o", "-o", "./target/aarch64-ruspiro/release/armstub8.elf"]
+dependencies = [
+    "buildstub_high"
+]
+
+[tasks.stub_low]
+command = "aarch64-none-elf-objcopy"
+args = ["-O", "binary", "./target/aarch64-ruspiro/release/armstub8.elf", "./target/armstub8.bin"]
+dependencies = [
+    "linkstub_low"
+]
+
+[tasks.stub_high]
+command = "aarch64-none-elf-objcopy"
+args = ["-O", "binary", "./target/aarch64-ruspiro/release/armstub8.elf", "./target/armstub8.bin"]
+dependencies = [
+    "linkstub_high"
+]
+
 [tasks.pi3]
-env = { FEATURES = "ruspiro_pi3" }
+env = { FEATURES = "pi3" }
 run_task = "kernel"
+
+[tasks.pi4_low]
+env = { FEATURES = "pi4_low" }
+run_task = "kernel"
+dependencies = [
+    "stub_low"
+]
+
+[tasks.pi4_high]
+env = { FEATURES = "pi4_high" }
+run_task = "kernel"
+dependencies = [
+    "stub_high"
+]
+
+[tasks.pi4stub_low]
+env = { FEATURES = "pi4_low" }
+run_task = "stub"
+
+[tasks.pi4stub_high]
+env = { FEATURES = "pi4_high" }
+run_task = "stub"
+
+[tasks.deploy_pi4]
+command = "cargo"
+args = ["ruspiro-push", "-k", "./target/kernel8.img", "-p", "COM3"]
+dependencies = [
+    "pi4"
+]
